Refactor repositories to use in-memory GraphStore
- Replaced Neo4j repositories with in-memory implementations for FieldEntity, MethodEntity, PackageEntity, and RepositoryEntity.
- Introduced GraphStore to manage entities and relationships in memory using JGraphT.
- Updated GraphBuilderImpl to persist data into GraphStore instead of Neo4j.
- Modified integration tests to work with the in-memory store, removing dependencies on Neo4j and Testcontainers.
- Adjusted Maven build configuration to use Java 17 and updated dependencies accordingly.