@@ -4,6 +4,7 @@ import com.extractor.core.exceptions.GraphException;
 import com.extractor.core.interfaces.GraphBuilder;
 import com.extractor.core.model.AnnotationEdge;
 import com.extractor.core.model.CallEdge;
+import com.extractor.core.model.ClassNode;
 import com.extractor.core.model.DependsOnEdge;
 import com.extractor.core.model.FieldNode;
 import com.extractor.core.model.ImportEdge;
@@ -17,80 +18,65 @@ import com.extractor.graph.entity.FieldEntity;
 import com.extractor.graph.entity.MethodEntity;
 import com.extractor.graph.entity.PackageEntity;
 import com.extractor.graph.entity.RepositoryEntity;
-import com.extractor.graph.repository.ArtifactEntityRepository;
-import com.extractor.graph.repository.ClassEntityRepository;
-import com.extractor.graph.repository.FieldEntityRepository;
-import com.extractor.graph.repository.MethodEntityRepository;
-import com.extractor.graph.repository.PackageEntityRepository;
-import com.extractor.graph.repository.RepositoryEntityRepository;
+import com.extractor.graph.store.GraphStore;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 /**
- * Persists {@link ParseResult} objects to the Neo4j graph in batches.
+ * Persists {@link ParseResult} objects into the in-memory {@link GraphStore}.
  *
- * <p>Nodes are upserted (merged) using findBy methods before saving to keep the
- * operation idempotent. For large repos the caller should pass results in batches
- * using {@link #persistBatch} rather than calling {@link #persist} in a loop.
+ * <p>All data lives in JVM memory. Call {@link GraphStore#clearRepo(String)} before re-scanning
+ * a repository to avoid stale entries.
+ *
+ * <p>Processing is two-pass per batch:
+ * <ol>
+ *   <li>First pass — add all {@link ClassEntity} vertices to the store.</li>
+ *   <li>Second pass — resolve import edges now that all vertices are present.</li>
+ * </ol>
  */
 @Service
 public class GraphBuilderImpl implements GraphBuilder {
 
     private static final Logger log = LoggerFactory.getLogger(GraphBuilderImpl.class);
 
-    private final RepositoryEntityRepository repoRepository;
-    private final ArtifactEntityRepository artifactRepository;
-    private final PackageEntityRepository packageRepository;
-    private final ClassEntityRepository classRepository;
-    private final MethodEntityRepository methodRepository;
-    private final FieldEntityRepository fieldRepository;
+    private final GraphStore store;
 
     @Value("${extractor.graph.batch-size:100}")
     private int batchSize;
 
-    public GraphBuilderImpl(RepositoryEntityRepository repoRepository,
-                            ArtifactEntityRepository artifactRepository,
-                            PackageEntityRepository packageRepository,
-                            ClassEntityRepository classRepository,
-                            MethodEntityRepository methodRepository,
-                            FieldEntityRepository fieldRepository) {
-        this.repoRepository = repoRepository;
-        this.artifactRepository = artifactRepository;
-        this.packageRepository = packageRepository;
-        this.classRepository = classRepository;
-        this.methodRepository = methodRepository;
-        this.fieldRepository = fieldRepository;
+    public GraphBuilderImpl(GraphStore store) {
+        this.store = store;
     }
 
     @Override
-    @Transactional
     public void persist(ParseResult result, RepoConfig repoConfig) throws GraphException {
-        persistBatch(List.of(result), repoConfig);
+        persistBatch(Collections.singletonList(result), repoConfig);
     }
 
     @Override
-    @Transactional
     public void persistBatch(List<ParseResult> results, RepoConfig repoConfig) throws GraphException {
         if (results.isEmpty()) return;
         try {
             // Ensure repository node exists
-            RepositoryEntity repoEntity = repoRepository.findByName(repoConfig.name())
-                    .orElseGet(() -> repoRepository.save(new RepositoryEntity(
-                            repoConfig.name(), repoConfig.url(), repoConfig.branch(),
-                            repoConfig.localPath(), repoConfig.buildTool())));
+            store.findRepoByName(repoConfig.getName()).orElseGet(() -> {
+                RepositoryEntity repo = new RepositoryEntity(
+                        repoConfig.getName(), repoConfig.getUrl(), repoConfig.getBranch(),
+                        repoConfig.getLocalPath(), repoConfig.getBuildTool());
+                store.putRepo(repo);
+                return repo;
+            });
 
+            // First pass: create ClassEntity objects and add to store
             List<ClassEntity> batch = new ArrayList<>(batchSize);
-
             for (ParseResult result : results) {
                 ClassEntity classEntity = buildClassEntity(result);
                 batch.add(classEntity);
-
                 if (batch.size() >= batchSize) {
                     flushBatch(batch);
                 }
@@ -99,28 +85,40 @@ public class GraphBuilderImpl implements GraphBuilder {
                 flushBatch(batch);
             }
 
-            log.debug("Persisted batch of {} parse results for repo '{}'", results.size(), repoConfig.name());
+            // Second pass: resolve IMPORTS edges now all vertices exist
+            for (ParseResult result : results) {
+                String fromFqn = result.getClassNode().getFqn();
+                for (ImportEdge edge : result.getImports()) {
+                    if (edge.isWildcard()) continue;
+                    String toFqn = edge.getImportedFqn();
+                    if (store.findClassByFqn(toFqn).isPresent()) {
+                        store.addImportEdge(fromFqn, toFqn);
+                    }
+                }
+            }
+
+            log.debug("Persisted batch of {} parse results for repo '{}'", results.size(), repoConfig.getName());
         } catch (Exception e) {
-            throw new GraphException("Failed to persist batch for repo '" + repoConfig.name() + "': " + e.getMessage(), e);
+            throw new GraphException(
+                    "Failed to persist batch for repo '" + repoConfig.getName() + "': " + e.getMessage(), e);
         }
     }
 
     @Override
-    @Transactional
     public void persistDependencies(List<DependsOnEdge> edges) throws GraphException {
         if (edges.isEmpty()) return;
         try {
             for (DependsOnEdge edge : edges) {
-                ArtifactEntity from = findOrCreateArtifact(edge.fromGroupId(), edge.fromArtifactId(),
-                        edge.fromVersion(), "JAR", edge.repoName());
-                ArtifactEntity to = findOrCreateArtifact(edge.toGroupId(), edge.toArtifactId(),
-                        edge.toVersion(), "JAR", null);
+                ArtifactEntity from = findOrCreateArtifact(
+                        edge.getFromGroupId(), edge.getFromArtifactId(), edge.getFromVersion(), "JAR", edge.getRepoName());
+                ArtifactEntity to = findOrCreateArtifact(
+                        edge.getToGroupId(), edge.getToArtifactId(), edge.getToVersion(), "JAR", null);
 
                 boolean alreadyLinked = from.getDependencies().stream()
                         .anyMatch(dep -> dep.getDependency().equals(to));
                 if (!alreadyLinked) {
-                    from.getDependencies().add(new ArtifactDependency(to, edge.scope(), edge.isTransitive()));
-                    artifactRepository.save(from);
+                    from.getDependencies().add(new ArtifactDependency(to, edge.getScope(), edge.isTransitive()));
+                    store.putArtifact(from);
                 }
             }
             log.debug("Persisted {} DEPENDS_ON edges", edges.size());
@@ -132,67 +130,69 @@ public class GraphBuilderImpl implements GraphBuilder {
     // ── Private helpers ──────────────────────────────────────────────────
 
     private ClassEntity buildClassEntity(ParseResult result) {
-        var cn = result.classNode();
+        ClassNode cn = result.getClassNode();
 
-        // Upsert the class node
-        ClassEntity classEntity = classRepository.findByFullyQualifiedName(cn.fqn())
+        // Upsert (or reuse existing) class entity
+        ClassEntity classEntity = store.findClassByFqn(cn.getFqn())
                 .orElseGet(() -> new ClassEntity(
-                        cn.fqn(), cn.simpleName(), cn.classType(),
-                        cn.isAbstract(), cn.repoName(), cn.packageName(), cn.lineNumber()));
-
-        cn.javadoc().ifPresent(classEntity::setJavadoc);
+                        cn.getFqn(), cn.getSimpleName(), cn.getClassType(),
+                        cn.isAbstract(), cn.getRepoName(), cn.getPackageName(), cn.getLineNumber()));
+        cn.getJavadoc().ifPresent(classEntity::setJavadoc);
 
         // Ensure parent package exists
-        PackageEntity pkg = packageRepository
-                .findByFullyQualifiedNameAndRepoName(cn.packageName(), cn.repoName())
-                .orElseGet(() -> packageRepository.save(
-                        new PackageEntity(cn.packageName(), cn.repoName(), null)));
+        store.findPackageByFqnAndRepo(cn.getPackageName(), cn.getRepoName())
+                .orElseGet(() -> {
+                    PackageEntity pkg = new PackageEntity(cn.getPackageName(), cn.getRepoName(), null);
+                    store.putPackage(pkg);
+                    return pkg;
+                });
 
-        // Build method entities
+        // Build and store method entities
         List<MethodEntity> methodEntities = new ArrayList<>();
-        for (MethodNode mn : result.methods()) {
-            MethodEntity methodEntity = methodRepository
-                    .findBySignatureAndRepoName(mn.signature(), mn.repoName())
+        for (MethodNode mn : result.getMethods()) {
+            MethodEntity methodEntity = store.findMethodBySignatureAndRepo(mn.getSignature(), mn.getRepoName())
                     .orElseGet(() -> new MethodEntity(
-                            mn.signature(), mn.name(), mn.returnType(),
-                            mn.visibility(), mn.isStatic(), mn.repoName(), mn.lineNumber()));
-            mn.javadoc().ifPresent(methodEntity::setJavadoc);
+                            mn.getSignature(), mn.getName(), mn.getReturnType(),
+                            mn.getVisibility(), mn.isStatic(), mn.getRepoName(), mn.getLineNumber()));
+            mn.getJavadoc().ifPresent(methodEntity::setJavadoc);
+            store.putMethod(cn.getFqn(), methodEntity);
             methodEntities.add(methodEntity);
         }
         classEntity.setMethods(methodEntities);
 
-        // Build field entities
+        // Build and store field entities
         List<FieldEntity> fieldEntities = new ArrayList<>();
-        for (FieldNode fn : result.fields()) {
-            String annotationsJson = "[\"" + String.join("\",\"", fn.annotations()) + "\"]";
+        for (FieldNode fn : result.getFields()) {
+            String annotationsJson = "[\"" + String.join("\",\"", fn.getAnnotations()) + "\"]";
             FieldEntity fieldEntity = new FieldEntity(
-                    fn.name(), fn.fieldType(), fn.visibility(), annotationsJson, fn.repoName());
+                    fn.getName(), fn.getFieldType(), fn.getVisibility(), annotationsJson, fn.getRepoName());
+            store.putField(cn.getFqn(), fieldEntity);
             fieldEntities.add(fieldEntity);
         }
         classEntity.setFields(fieldEntities);
 
-        // Wire IMPORTS edges (lazy — targets may not be persisted yet; resolved in post-processing)
-        List<ClassEntity> importedClasses = new ArrayList<>();
-        for (ImportEdge edge : result.imports()) {
-            if (edge.isWildcard()) continue; // skip wildcard imports
-            classRepository.findByFullyQualifiedName(edge.importedFqn())
-                    .ifPresent(importedClasses::add);
-        }
-        classEntity.setImports(importedClasses);
-
+        // Note: IMPORTS edges are not wired here; they are resolved in the second pass in persistBatch.
         return classEntity;
     }
 
     private void flushBatch(List<ClassEntity> batch) {
-        classRepository.saveAll(batch);
-        log.trace("Flushed {} class entities to Neo4j", batch.size());
+        for (ClassEntity e : batch) {
+            store.putClass(e);
+            store.ensureVertex(e.getFullyQualifiedName());
+        }
+        log.trace("Flushed {} class entities to in-memory store", batch.size());
         batch.clear();
     }
 
-    private ArtifactEntity findOrCreateArtifact(String groupId, String artifactId,
-                                                  String version, String type, String repoName) {
-        return artifactRepository.findByGroupIdAndArtifactIdAndVersion(groupId, artifactId, version)
-                .orElseGet(() -> artifactRepository.save(
-                        new ArtifactEntity(groupId, artifactId, version, type, repoName)));
+    private ArtifactEntity findOrCreateArtifact(
+            String groupId, String artifactId, String version, String type, String repoName) {
+        return store.findArtifactByCoords(groupId, artifactId, version)
+                .orElseGet(() -> {
+                    ArtifactEntity a = new ArtifactEntity(groupId, artifactId, version, type, repoName);
+                    store.putArtifact(a);
+                    return a;
+                });
     }
 }
+
+
